fix: fix hero being cut off in certain resolutions (#148)
Also:
- Renamed navbar to nav-bar and navBar for consistency with locales-bar
- Renamed Header to NavBar
- Prefer % over vw because it gets over the scrollbars
- Minor adjustments to the mobile nav

Fixes #95.

--- a/src/shared/components/banner/index.module.css
+++ b/src/shared/components/banner/index.module.css
@@ -2,7 +2,7 @@
 @import "shared/styles/imports/custom-medias.css";
 
 .container {
-  width: 100vw;
+  width: 100%;
   z-index: 3;
   padding: 25px;
   display: flex;
