--- a/src/shared/components/gateway-section/index.module.css
+++ b/src/shared/components/gateway-section/index.module.css
@@ -58,7 +58,7 @@
   }
 
   & .toastContainer {
-    margin-top: calc(var(--navbar-desktop-height) + 3px);
+    margin-top: calc(var(--nav-bar-desktop-height) + 3px);
 
     & .error {
       background-color: var(--color-error);
